# django-vue-blog-example

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
backend/: Dockerfile.dev
backend/app/: settings.py  urls.py
backend/blog/: admin.py  forms.py  models.py  serializers.py  views.py
backend/blog/migrations/: 0001_initial.py  0002_post_thumbnail.py
frontend/: Dockerfile.dev  bun.lockb  nuxt.config.ts  package-lock.json  package.json
frontend/components/: HeroSection.vue  SearchDialog.vue
frontend/composables/: useApi.ts
frontend/layouts/: default.vue
frontend/pages/: index.vue
frontend/pages/articles/: [slug].vue
frontend/pages/posts/: [slug].vue
frontend/stores/: article.ts  usePostStore.ts
frontend/types/: post.ts
frontend/utils/: api.ts
